[package]
name = "pg_lsp_new"
version = "0.0.0"
edition = "2021"

[dependencies]
futures              = "0.3.31"
anyhow               = { workspace = true }
rustc-hash           = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
tokio                = { workspace = true, features = ["rt", "io-std"] }
tower-lsp            = { version = "0.20.0" }
tracing              = { workspace = true, features = ["attributes"] }
pg_lsp_converters              = { workspace = true }
pg_console           = { workspace = true }
pg_diagnostics        = { workspace = true }
pg_configuration        = { workspace = true }
pg_fs                = { workspace = true }
pg_workspace_new     = { workspace = true }
biome_deserialize              = { workspace = true }

[dev-dependencies]

[lib]
doctest = false

[features]
