[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pg_query_ext_codegen"
repository.workspace = true
version              = "0.0.0"


[dependencies]
proc-macro2.workspace = true
quote.workspace       = true

pg_query_proto_parser.workspace = true

[lib]
doctest    = false
proc-macro = true
